--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,6 +12,10 @@
     gap: 10rem;
     align-items: center;
     width: 100%;
+
+    ::ng-deep.link {
+      color: var(--text-color);
+    }
   }
 
   .hadas {
@@ -151,6 +155,10 @@
       gap: 2rem;
       padding: 1.5rem;
       width: auto;
+
+      ::ng-deep.menu-btn {
+        content: url("../../assets/icons/menu.svg") !important;
+      }
     }
 
     .hadas {
