--- a/src/app/pharm-yarok/pharm-yarok.component.scss
+++ b/src/app/pharm-yarok/pharm-yarok.component.scss
@@ -10,27 +10,6 @@
     width: auto;
   }
 
-  .header {
-    @extend .paragraph-gap-0;
-    @extend .full-width;
-
-    grid-column: span 3;
-
-    .header {
-      position: absolute;
-      color: var(--card-background);
-
-      ::ng-deep .link {
-        color: var(--card-background);
-      }
-    }
-
-    .image {
-      width: 100%;
-      content: url("../../assets/pharmYarok/header.svg");
-    }
-  }
-
   .overview {
     @extend .section;
 
@@ -105,6 +84,10 @@
 
       .content {
         @extend .paragraph-gap-1;
+      }
+
+      .no-gap {
+        gap: 0;
       }
     }
   }
@@ -380,30 +363,6 @@
     display: flex;
     flex-direction: column;
     gap: 4rem;
-
-    .header {
-      .header {
-        height: 100%;
-
-        ::ng-deep.link {
-          color: var(--text-color);
-        }
-
-        ::ng-deep.menu-btn {
-          content: url("../../assets/icons/menu-light.svg");
-        }
-      }
-
-      .image {
-        content: url("../../assets/pharmYarok/header-mobile.svg");
-      }
-    }
-
-    ::ng-deep.menu-btn,
-    ::ng-deep.close {
-      display: flex;
-      padding: 1.5rem;
-    }
 
     .research {
       .problems {
