--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -1,5 +1,5 @@
 <app-abstract-case [firstProject]="'profiles'" [secondProject]="'threats'">
-  <div class="pharm-yarok">
+  <div class="case-content pharm-yarok">
     <app-case-header
       class="case-header"
       [headerImg]="headerImg"
@@ -9,7 +9,7 @@
     <div class="overview">
       <div class="paragraph-gap-2">
         <span class="title">Overview</span>
-        <span class="text">
+        <span>
           Pharm Yarok sells medicinal cannabis mostly through phone and
           WhatsApp.
           <br />
@@ -19,7 +19,7 @@
       </div>
       <div class="paragraph-gap-2">
         <span class="title">The challenge</span>
-        <span class="text">
+        <span>
           Redesign the app to improve usability, make ordering easier and
           convenient for future purchases, <br class="hide-on-mobile" />
           to encourage users to purchase on the app.
@@ -34,40 +34,38 @@
     <div class="user-story hide-on-mobile">
       <div class="paragraph-gap-2">
         <img src="../../assets/pharmYarok/userStory1.svg" />
-        <span class="text"
+        <span
           >Avi is texting with the pharmacy's reps to get info on strains to
           buy.</span
         >
       </div>
       <div class="paragraph-gap-2">
         <img src="../../assets/pharmYarok/userStory2.svg" />
-        <span class="text"
+        <span
           >Avi is disappointed by the lack of info, recommendations, and images.
         </span>
       </div>
       <div class="paragraph-gap-2">
         <img src="../../assets/pharmYarok/userStory3.svg" />
-        <span class="text">Avi decides to search strains on the app.</span>
+        <span>Avi decides to search strains on the app.</span>
       </div>
       <div class="paragraph-gap-2">
         <img src="../../assets/pharmYarok/userStory4.svg" />
-        <span class="text"
+        <span
           >Avi quickly finds the info and images he needed and places an
           order.</span
         >
       </div>
       <div class="paragraph-gap-2">
         <img src="../../assets/pharmYarok/userStory5.svg" />
-        <span class="text"
-          >Avi got the order, and he's relieved to have his medicine.</span
-        >
+        <span>Avi got the order, and he's relieved to have his medicine.</span>
       </div>
     </div>
 
     <div class="research">
       <div class="paragraph">
         <span class="title">Research</span>
-        <span class="text">
+        <span>
           I began the project by benchmarking similar apps to understand the
           features that users expect and identify areas for improvement. <br />
           I then conducted user interviews to understand how people pick their
@@ -240,7 +238,7 @@
     <div class="sections">
       <div class="paragraph-gap-2">
         <span class="title">The solution</span>
-        <span class="text">
+        <span>
           The revamped app simplifies medicinal cannabis ordering by providing
           patients with insightful treatment decisions <br />
           and facilitates quick, effortless ordering.
@@ -252,7 +250,7 @@
           <span class="sub-title">Wireframes</span>
           <span class="title"> The search page </span>
         </div>
-        <span class="text">
+        <span>
           To help users find the strains they're looking for easily, I
           categorized the products according to the most common factors that
           <br class="hide-on-mobile" />patients consider when choosing a strain:
