--- a/src/app/threats/threats.component.html
+++ b/src/app/threats/threats.component.html
@@ -1,5 +1,5 @@
 <app-abstract-case [firstProject]="'profiles'" [secondProject]="'pharm-yarok'">
-  <div class="threats">
+  <div class="case-content threats">
     <app-case-header
       class="case-header"
       [headerImg]="headerImg"
@@ -9,7 +9,7 @@
     <div class="overview">
       <div class="paragraph-gap-2">
         <span class="title">Overview</span>
-        <span class="text">
+        <span>
           This project was done as part of an operational command and control
           system used by the Israeli Navy.<br />
           <span class="text-bold">
@@ -20,7 +20,7 @@
       </div>
       <div class="paragraph-gap-2">
         <span class="title">The challenge</span>
-        <span class="text">
+        <span>
           Each position holder on a ship has a different responsibility in a
           threat situation.<br />
           My goal was to improve how Navy ships access and analyze potential
@@ -68,7 +68,7 @@
       <div class="research">
         <div class="paragraph">
           <span class="title">Research</span>
-          <span class="text">
+          <span>
             To understand the Navy's users' needs, <br class="show-on-mobile" />
             I visited a ship and conducted interviews with each relevant
             position holder.<br />
@@ -185,7 +185,7 @@
       <div class="content">
         <div class="header">
           <span class="title">Wireframing The Solutions</span>
-          <span class="text">
+          <span>
             In order to optimize information concentration, bring scanning
             speeds up, and reduce human error, <br /><span class="text-bold">
               I designed 2 solutions following these key principles:
@@ -317,7 +317,7 @@
       <div class="cards">
         <span class="card">
           <span class="chip-title">Goal</span>
-          <span class="text"
+          <span
             >Evaluating the usability of the features and measure how well
             <br />they help users fulfill their role in a threat
             situation.</span
@@ -325,7 +325,7 @@
         </span>
         <span class="card">
           <span class="chip-title">Method</span>
-          <span class="text"
+          <span
             >5 ship defense controllers were tested, whose performance was
             <br />measured based on their completion times.</span
           >
@@ -333,7 +333,7 @@
       </div>
       <span class="card">
         <span class="chip-title">Results</span>
-        <span class="text"
+        <span
           ><span class="text-bold">
             Overall, the usability testing results were positive, with only one
             minor usability issue detected:
