--- a/src/app/case/abstract-case/abstract-case.component.scss
+++ b/src/app/case/abstract-case/abstract-case.component.scss
@@ -1,3 +1,14 @@
+.case-content {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-row-gap: 8.25rem;
+
+  > div {
+    grid-column: 2;
+    width: auto;
+  }
+}
+
 .case-header {
   grid-column: span 3;
 }
