--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,8 +14,9 @@
         </div>
       </div>
       <div class="projects">
-        <img (click)="goto('threats')" class="threats" />
-        <img (click)="goto('pharm-yarok')" class="pharm-yarok" />
+        <img class="profiles" (click)="goto('profiles')" />
+        <img class="threats" (click)="goto('threats')" />
+        <img class="pharm-yarok" (click)="goto('pharm-yarok')" />
       </div>
       <div id="about" class="about">
         <span class="card">
