--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ body {
 
 body {
   margin: 0;
-  font-family: Inter-Medium;
+  font-family: Inter;
   color: var(--text-color);
   line-height: 160%;
 }
