--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -45,7 +45,7 @@
 
     .menu {
       width: 100%;
-      height: 100%;
+      height: -webkit-fill-available;
       position: absolute;
       left: 0;
       background: var(--card-background);
