--- a/src/font.scss
+++ b/src/font.scss
@@ -1,4 +1,23 @@
 @font-face {
-  font-family: Inter-Medium;
+  font-family: Inter;
+  src: url("./assets/font/Inter-Regular.ttf") format("truetype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Inter;
   src: url("./assets/font/Inter-Medium.ttf") format("truetype");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: Inter;
+  src: url("./assets/font/Inter-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: Inter;
+  src: url("./assets/font/Inter-Bold.ttf") format("truetype");
+  font-weight: 700;
 }
